killing whitespace: pre-line; does more harm than good. I trust webdevs who use bp to use pre with the care it deserves. fixes #294

--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ sub { bottom: -0.25em; }
 
 pre {
   /* www.pathf.com/blogs/2008/05/formatting-quoted-code-in-blog-posts-css21-white-space-pre-wrap/ */
-  white-space: pre; white-space: pre-wrap; white-space: pre-line; word-wrap: break-word;
+  white-space: pre; white-space: pre-wrap; word-wrap: break-word;
   padding: 15px;
 }
 
